# multicall

./: .example.env  .gitignore  .gitpod.Dockerfile  Cargo.toml  README.md  justfile  state.json
.cargo/: config
artifacts/: checksums.txt  checksums_intermediate.txt  multicall.wasm  multiquery.wasm
schema/: multicall.json
src/: contract.rs  interface.rs  lib.rs  msg.rs  querier.rs
