[package]
name = "multicall"
version = "0.2.0"
authors = ["SCB10x"]
edition = "2021"
repository = "https://github.com/scb-10x/multicall"
description = "On-chain query aggregator/batcher for CosmWasm"

resolver = "2"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use export feature to enable all instantiate/execute/query exports
export = []
default = ["export"]
daemon-bin = ["cw-orch/daemon", "dotenv", "env_logger", "clap"]

[[bin]]
name = "deploy"
required-features = ["daemon-bin"]

[[bin]]
name = "schema"


[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.0
"""

[dependencies]
cosmwasm-std = "2.0"
cw2 = "2.0"
cosmwasm-schema = "2.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.63" }
cw-orch = { version = "0.27.0" }

clap = { version = "4.5.20", features = ["derive"], optional = true }
env_logger = {  version = "0.11.5", optional = true }
dotenv = {  ersion = "0.15.0", optional = true }

[dev-dependencies]
cosmwasm-vm = { version = "2.0.0" }
rand = "0.8.3"
base64 = "0.13.0"
test-case = "2.0.0"
